syntax = "proto3";

message JoinNamesRequest {
  string name = 1;
  string surname = 2;
}

message JoinNamesResponse {
  string fullname = 1;
}

service Name {
  rpc JoinNames (JoinNamesRequest) returns (JoinNamesResponse);
}